<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="ProductDetailFragmentBinding">
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large">

            <TextView
                android:id="@+id/title_view"
                style="@style/TextView.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Title" />

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="0dp"
                android:layout_height="@dimen/detail_image_height"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_view"
                tools:background="@color/background" />

            <TextView
                android:id="@+id/price_view"
                style="@style/TextView.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:text="@string/detail_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_view" />

            <ImageView
                android:id="@+id/image_view_ic_star"
                android:layout_width="60dp"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginBottom="@dimen/spacing_xsmall"
                app:layout_constraintBottom_toBottomOf="@+id/price_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/price_view" />

            <TextView
                android:id="@+id/textView"
                style="@style/TextView.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginTop="@dimen/margin_large"
                app:layout_constraintEnd_toStartOf="@+id/image_view_ic_star"
                app:layout_constraintStart_toEndOf="@+id/price_view"
                app:layout_constraintTop_toBottomOf="@+id/image_view"
                tools:text="$10" />

            <TextView
                android:id="@+id/description_title_view"
                style="@style/TextView.Big"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_large"
                android:text="Description:"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/price_view"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/description_view"
                style="@style/TextView.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_large"
                android:focusableInTouchMode="false"
                app:layout_constraintTop_toBottomOf="@+id/description_title_view"
                tools:visibility="visible" />

            <View
                android:id="@+id/view_line_bottom"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_large"
                android:background="?android:attr/colorControlNormal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_view" />

            <!-- Loading -->
            <ViewStub
                android:id="@+id/detailLoadingViewStub"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inflatedId="@+id/layoutLoading"
                android:layout="@layout/layout_loading" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
