...
                app:iconifiedByDefault="false"
                app:layout_constraintTop_toTopOf="parent"
                app:queryHint="@string/search_hint" />
        </androidx.cardview.widget.CardView>

        <com.airbnb.epoxy.EpoxyRecyclerView
            android:id="@+id/searchEpoxyRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingTop="@dimen/margin_small"
            android:paddingBottom="@dimen/margin_small"
            android:background="@color/colorGreyBackground"
...
